# text_recognition_server

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  recognition.py  requirements.txt  res.json  server.py  setup.cfg
app/: __init__.py  main.py
app/dependencies/: __init__.py
app/services/: __init__.py  ctpn.py
app/utils/: filepath.py  image.py
static/css/: style_document.css
static/js/: document_driver.js
templates/: index_document.html  visualise_page.html
test/: test_image.py
test/samples/: file.txt
