[tool.poetry]
name = "text_recogntion"
version = "0.1.0"
description = "Dummy server for test recognition purposes"
authors = ["Aitemir Kuandyk <mooniron.k@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.1"
tensorflow = "1.3"
Cython = "0.24"
opencv-python = "^4.5.1"
easydict = "^1.9"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
python-multipart = "^0.0.5"
Pillow = "^8.1.0"
numpy = "1.16.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
